fixed lower part of containers not being visible on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,6 +313,7 @@ label {
 
   .content-box {
     padding: 10%;
+    margin-bottom: 50px;
   }
 
 }
